# talent-plan

courses/rust/building-blocks/bb_4_threadpool/: Cargo.toml
courses/rust/building-blocks/bb_4_threadpool/src/: main.rs
courses/rust/building-blocks/serialize_bson/: Cargo.toml  test.bson
courses/rust/building-blocks/serialize_bson/src/: main.rs
courses/rust/building-blocks/serialize_json/: Cargo.toml
courses/rust/building-blocks/serialize_json/src/: main.rs
courses/rust/building-blocks/serialize_ron/: Cargo.toml
courses/rust/building-blocks/serialize_ron/src/: main.rs
courses/rust/projects/project-1-self/: Cargo.toml
courses/rust/projects/project-1-self/src/: kv.rs  lib.rs
courses/rust/projects/project-2-self/: Cargo.toml
courses/rust/projects/project-2-self/src/: kv.rs  lib.rs
courses/rust/projects/project-2-self/tests/: tests.rs
