[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tempfile = "3.10.1"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
